--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     </footer>
 
     <footer>
-        <p>&copy; 2024 Creado por: GerardoBastidas.com y Paul</p>
+        <p>&copy; 2024 Creado por: <a href="https://gerardobastidas.com" style="color: white;">GerardoBastidas.com</a> y Paul</p>
     </footer>
 </body>
 </html>
