--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <p>Transformamos espacios en hogares para la familia peruana, a través de proyectos inmobiliarios innovadores inspirados por el talento de nuestra gente, e intermediamos para que nuestros clientes encuentren el hogar que tanto deseaban o enajenen con seguridad y a precio justo sus propiedades.</p>
                     </div>
                     <div class="mision-imagen">
-                        <img src="tu-imagen-mision.jpg" alt="Imagen Misión">
+                        <img src="ig/familia-wara.png" alt="Imagen Misión">
                     </div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
                         <p>Ser reconocidos por la innovación en crear hogares para cada familia peruana y como una empresa sólida, confiable y segura para la intermediación inmobiliaria.</p>
                     </div>
                     <div class="vision-imagen">
-                        <img src="tu-imagen-vision.jpg" alt="Imagen Visión">
+                         <img src="ig/casa-huaral-wara.png" alt="Imagen Visión">
                     </div>
                 </div>
             </div>
