--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta charset="UTF-8">
     <title>Wara Grupo Inmobiliario</title>
     <link rel="icon" href="ig/imagendewara.jpg" type="image/png">
+     <link rel="icon" href="ig/imagendewara.jpg" sizes="16x16" type="image/png">
+    <link rel="apple-touch-icon" href="ig/imagendewara.jpg">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
 </head>
