Update index.html anuncio
anuncio de wara

--- a/index.html
+++ b/index.html
@@ -276,14 +276,17 @@
     <footer>
         <p>&copy; 2024 Creado por: <a href="https://gerardobastidas.com" style="color: white;">GerardoBastidas.com</a> y Paul</p>
     </footer>
-</body>
-</html>
-
-
 
 
 <script src="script.js"></script>
 
-   
+<!-- POPUP DE ANUNCIO -->
+<div id="popup">
+  <div class="popup-content">
+    <span class="close-btn" onclick="cerrarPopup()">✖</span>
+    <img src="ig/anuncio.jpg" alt="Anuncio" class="popup-image">
+  </div>
+</div>
+
 </body>
 </html>
