--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <section>
         <div class="panel">
-            <img src="ig/banner10.jpg" alt="Imagen de fondo">
+            <img src="ig/preventa.png" alt="Imagen de fondo">
             <div class="texto">Compra tu lote en Huaral</div>
         </div>
 
