--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
         <div class="footer-polities">
             <nav class="footer-nav">
                 <ul>
+                    <li><a href="reclamos.html">libro de reclamos</a></li>
                     <li><a href="#">Política de privacidad</a></li>
                     <li><a href="#">Términos y condiciones</a></li>
                     <li><a href="#">Política de Cookies</a></li>
