--- a/index.html
+++ b/index.html
@@ -232,52 +232,51 @@
     </section>
 
     <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <div class="footer-image">
-                <img src="ig/Logo Wara Vectorizado Footer.svg" alt="Logo" width="200" height="200">
-                <p>&copy; 2024 Grupo Inmobiliario Wara. Todos los derechos reservados.</p>
+   <footer>
+    <div class="footer-content">
+        <div class="footer-image">
+            <img src="ig/Logo Wara Vectorizado Footer.svg" alt="Logo" width="200" height="200">
+            <p>&copy; 2024 Grupo Inmobiliario Wara. Todos los derechos reservados.</p>
+        </div>
+        <hr class="footer-line-vertical">
+        <div class="footer-info">
+            <div class="footer-contact">
+                <p class="footer-data">Teléfono: +51 941 217 300</p><br>
+                <p class="footer-data">Correo: waragrupoinmobiliario@gmail.com</p><br>
+                <p class="footer-data">Dirección: Avenida Jirón Calle, Lima - Perú</p><br>
             </div>
-            <hr class="footer-line-vertical">
-            <div class="footer-info">
-                <div class="footer-contact">
-                    <p class="footer-data">Teléfono: +51 941 217 300</p><br>
-                    <p class="footer-data">Correo:  waragrupoinmobiliario@gmail.com</p><br>
-                    <p class="footer-data">Dirección: Avenida Jirón Calle, Lima - Perú</p><br>
+            <div class="footer-social">
+                <div>
+                    <p>Facebook</p>
+                    <a href="https://www.facebook.com/waragrupoinmobiliario/" target="_blank">
+                        <img class="footer-logo" src="ig/facebook-logo-.webp" alt="Facebook" width="80" height="80">
+                    </a>
                 </div>
-                <div class="footer-social">
-                    <div>
-                        <p>Facebook</p>
-                        <a href="https://www.facebook.com/waragrupoinmobiliario/" target="_blank">
-                            <img class="footer-logo" src="ig/facebook-logo-.webp" alt="Facebook" width="80" height="80">
-                        </a>
-                    </div>
-                    <div>
-                        <p>WhatsApp</p>
-                        <img class="footer-logo" src="ig/whatsapp-logo.webp" alt="WhatsApp" width="80" height="80">
-                    </div>
+                <div>
+                    <p>WhatsApp</p>
+                    <img class="footer-logo" src="ig/whatsapp-logo.webp" alt="WhatsApp" width="80" height="80">
                 </div>
             </div>
         </div>
+    </div>
 
-        <hr class="footer-line-horizontal">
+    <hr class="footer-line-horizontal">
 
-        <div class="footer-polities">
-            <nav class="footer-nav">
-                <ul>
-                    <li><a href="reclamos.html">libro de reclamos</a></li>
-                    <li><a href="#">Política de privacidad</a></li>
-                    <li><a href="#">Términos y condiciones</a></li>
-                    <li><a href="#">Política de Cookies</a></li>
-                </ul>
-            </nav>
-        </div>
-    </footer>
+    <div class="footer-polities">
+        <nav class="footer-nav">
+            <ul>
+                <li><a href="reclamos.html">Libro de reclamos</a></li>
+                <li><a href="#">Política de privacidad</a></li>
+                <li><a href="#">Términos y condiciones</a></li>
+                <li><a href="#">Política de Cookies</a></li>
+            </ul>
+        </nav>
+    </div>
 
-    <footer>
+    <div class="footer-copy">
         <p>&copy; 2024 Creado por: <a href="https://gerardobastidas.com" style="color: white;">GerardoBastidas.com</a> y Paul</p>
-    </footer>
-
+    </div>
+</footer>
 
 <script src="script.js"></script>
 
