--- a/reclamos.html
+++ b/reclamos.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Libro de Reclamaciones</title>
     <style>
-        /* Estilos CSS embebidos */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -13,7 +12,7 @@
         }
 
         form {
-            max-width: 600px;
+            max-width: 700px;
             margin: auto;
             background-color: white;
             padding: 30px;
@@ -34,6 +33,8 @@
 
         input[type="text"],
         input[type="email"],
+        input[type="number"],
+        input[type="date"],
         select,
         textarea {
             width: 100%;
@@ -66,30 +67,58 @@
     <h1>Libro de Reclamaciones</h1>
 
     <form action="https://formsubmit.co/waracorreo@gmail.com" method="POST">
-        <!-- Campos ocultos -->
+         <!-- Configuración interna -->
         <input type="hidden" name="_subject" value="Nuevo Reclamo desde el Libro de Reclamaciones">
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_template" value="table">
         <input type="hidden" name="_next" value="https://tusitio.com/gracias.html">
 
-        <!-- Campos del formulario -->
-        <label for="nombre">Nombre completo:</label>
-        <input type="text" id="nombre" name="nombre" required>
+        <!-- Datos del consumidor -->
+        <label for="nombres">Nombres completos:</label>
+        <input type="text" id="nombres" name="nombres" required>
+
+        <label for="apellidos">Apellidos completos:</label>
+        <input type="text" id="apellidos" name="apellidos" required>
+
+        <label for="dni">DNI / CE / Pasaporte:</label>
+        <input type="text" id="dni" name="dni" required>
+
+        <label for="edad">Edad:</label>
+        <input type="number" id="edad" name="edad" min="1" required>
+
+        <label for="direccion">Dirección:</label>
+        <input type="text" id="direccion" name="direccion" required>
+
+        <label for="telefono">Teléfono:</label>
+        <input type="text" id="telefono" name="telefono" required>
 
         <label for="email">Correo electrónico:</label>
         <input type="email" id="email" name="email" required>
 
+        <!-- Datos del producto o servicio -->
+        <label for="fecha">Fecha del incidente:</label>
+        <input type="date" id="fecha" name="fecha" required>
+
+        <label for="servicio">Producto o servicio relacionado:</label>
+        <input type="text" id="servicio" name="servicio" required>
+
+        <label for="monto">Monto involucrado (si aplica):</label>
+        <input type="text" id="monto" name="monto">
+
+        <!-- Tipo -->
         <label for="tipo">Tipo de mensaje:</label>
         <select id="tipo" name="tipo" required>
-            <option value="reclamo">Reclamo</option>
-            <option value="queja">Queja</option>
+            <option value="Reclamo">Reclamo (sobre un producto o servicio)</option>
+            <option value="Queja">Queja (por atención al cliente u otra razón)</option>
         </select>
 
+        <!-- Descripción -->
         <label for="detalle">Detalle del reclamo o queja:</label>
         <textarea id="detalle" name="detalle" rows="5" required></textarea>
 
-        <label for="pedido">Pedido del consumidor:</label>
-        <textarea id="pedido" name="pedido" rows="3"></textarea>
+        <!-- Firma -->
+        <label for="firma">Nombre del consumidor (como firma):</label>
+        <input type="text" id="firma" name="firma" required>
 
         <button type="submit">Enviar</button>
     </form>
