--- a/reclamos.html
+++ b/reclamos.html
@@ -77,7 +77,7 @@
 
     <h1>Libro de Reclamaciones</h1>
 
-    <form action="https://formsubmit.co/waracorreo@gmail.com" method="POST">
+   <form id="formularioReclamo" action="https://formsubmit.co/waracorreo@gmail.com" method="POST">
         <!-- Configuración interna -->
         <input type="hidden" name="_subject" value="Nuevo Reclamo desde el Libro de Reclamaciones">
         <input type="hidden" name="_captcha" value="false">
