--- a/reclamos.html
+++ b/reclamos.html
@@ -95,8 +95,8 @@
         <input type="text" id="dni" name="dni" maxlength="8" required>
 
         <label for="edad">Edad:</label>
-        <input type="number" id="edad" name="edad" min="1" required>
-
+        <input type="number" id="edad" name="edad" min="1" max="99" required>
+       
         <label for="direccion">Dirección:</label>
         <input type="text" id="direccion" name="direccion" required>
 
@@ -150,14 +150,26 @@ document.addEventListener("DOMContentLoaded", function () {
         }
     });
 
-    // Validación final al enviar
+   <script>
+document.addEventListener("DOMContentLoaded", function () {
+    const formulario = document.getElementById("formularioReclamo");
+    const dniInput = document.getElementById("dni");
+
+    // Bloquear letras y símbolos en el campo DNI
+    dniInput.addEventListener("keypress", function (e) {
+        if (!/\d/.test(e.key)) {
+            e.preventDefault();
+        }
+    });
+
     formulario.addEventListener("submit", function(e) {
         const email = document.getElementById("email").value.trim();
         const dni = dniInput.value.trim();
         const telefono = document.getElementById("telefono").value.trim();
+        const edad = parseInt(document.getElementById("edad").value.trim(), 10);
 
         const emailRegex = /^[^@]+@[^@]+\.[a-zA-Z]{2,}$/;
-        const dniRegex = /^[0-9]{8}$/;  // Exactamente 8 dígitos numéricos
+        const dniRegex = /^[0-9]{8}$/;
         const telefonoRegex = /^[0-9]{6,12}$/;
 
         if (!emailRegex.test(email)) {
@@ -178,13 +190,18 @@ document.addEventListener("DOMContentLoaded", function () {
             return;
         }
 
+        if (isNaN(edad) || edad < 1 || edad > 99) {
+            alert("Ingrese una edad válida entre 1 y 99.");
+            e.preventDefault();
+            return;
+        }
+
         if (!confirm("¿Está seguro de enviar el reclamo?")) {
             e.preventDefault();
         }
     });
 });
 </script>
-
 
 </body>
 </html>
