--- a/index.html
+++ b/index.html
@@ -278,8 +278,23 @@
     </div>
 </footer>
 
+<div id="navidad-overlay">
+      <div id="navidad-popup">
+        <h2>🎅 ¡Feliz Navidad! 🎁</h2>
+        <p>
+          Saludamos con cariño a todos los <b>socios y amigos de la familia Wara</b>.
+          ¡Que estas fiestas estén llenas de paz, alegría y unión!
+        </p>
+
+        <button id="cerrar-navidad">Cerrar</button>
+      </div>
+    </div>
+
+
+    
 <script src="script.js"></script>
 
 
 </body>
 </html>
+
