--- a/index.html
+++ b/index.html
@@ -279,17 +279,12 @@
 </footer>
 
 <div id="navidad-overlay">
-      <div id="navidad-popup">
-        <h2>🎅 ¡Feliz Navidad! 🎁</h2>
-        <p>
-          Saludamos con cariño a todos los <b>socios y amigos de la familia Wara</b>.
-          ¡Que estas fiestas estén llenas de paz, alegría y unión!
-        </p>
+  <div id="navidad-popup">
+    <img src="ig/FLOTANTE_WARA.jpg" alt="Feliz Navidad" id="navidad-img">
 
-        <button id="cerrar-navidad">Cerrar</button>
-      </div>
-    </div>
-
+    <button id="cerrar-navidad">Cerrar</button>
+  </div>
+</div>
 
     
 <script src="script.js"></script>
@@ -297,4 +292,5 @@
 
 </body>
 </html>
+
 
