--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </label>
 
         <nav id="menu">
-            <img src="ig/logo_WARA" alt="Logo" height="110" width="170">
+            <img src="ig/logo_WARA.jpg" alt="Logo" height="110" width="170">
             <ul>
                 <li><a href="#index">Inicio</a></li>
                 <li><a href="#sobremi">Contacto</a></li>
@@ -292,6 +292,7 @@
 
 </body>
 </html>
+
 
 
 
