--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
         <hr class="footer-line-vertical">
         <div class="footer-info">
             <div class="footer-contact">
-                <p class="footer-data">Teléfono: +51 941 217 300</p><br>
+                <p class="footer-data">Teléfono: +51 934766169</p><br>
                 <p class="footer-data">Correo: waragrupoinmobiliario@gmail.com</p><br>
-                <p class="footer-data">Dirección: Avenida Jirón Calle, Lima - Perú</p><br>
+                <p class="footer-data">Dirección: Calle 7 Urb.Alejandro Delgado Mz"J" Lote 4, Huaral -lima- Perú</p><br>
             </div>
             <div class="footer-social">
                 <div>
@@ -292,6 +292,7 @@
 
 </body>
 </html>
+
 
 
 
