--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
    <footer>
     <div class="footer-content">
         <div class="footer-image">
-            <img src="ig/logo_WARA1.JPG"  alt="Logo" width="200" height="200">
+            <img src="ig/LOGO-WARA-OFICIAL-SEGUNDA-VERSIÓN.PNG"  alt="Logo" width="200" height="200">
             <p>&copy; 2024 Grupo Inmobiliario Wara. Todos los derechos reservados.</p>
         </div>
         <hr class="footer-line-vertical">
@@ -292,6 +292,7 @@
 
 </body>
 </html>
+
 
 
 
