--- a/index.html
+++ b/index.html
@@ -254,7 +254,9 @@
                 </div>
                 <div>
                     <p>WhatsApp</p>
-                    <img class="footer-logo" src="ig/whatsapp-logo.webp" alt="WhatsApp" width="80" height="80">
+                    <a href="https://wa.me/51941217300" target="_blank">
+
+                  <img class="footer-logo" src="ig/whatsapp-logo.webp"alt="WhatsApp" width="80" height="80">
                 </div>
             </div>
         </div>
@@ -292,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
