--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Wara Grupo Inmobiliario</title>
+    <title>Wara Grupo Inmobiliario | Venta de Lotes y Proyectos en Huaral</title>
     <link rel="icon" href="ig/imagendewara.jpg" type="image/png">
      <link rel="icon" href="ig/imagendewara.jpg" sizes="16x16" type="image/png">
     <link rel="apple-touch-icon" href="ig/imagendewara.jpg">
@@ -293,6 +293,7 @@
 
 </body>
 </html>
+
 
 
 
