--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta name="description" content="Wara Grupo Inmobiliario: Venta de lotes y proyectos en Huaral. Descubre terrenos estratégicos y servicios de calidad para tu familia.">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
@@ -293,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
