--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Wara Grupo Inmobiliario | Venta de Lotes y Proyectos en Huaral</title>
-    <link rel="icon" href="ig/imagendewara.jpg" type="image/png">
-     <link rel="icon" href="ig/imagendewara.jpg" sizes="16x16" type="image/png">
+    <link rel="icon" href="ig/logo_WARA.jpg" type="image/png">
+    <link rel="icon" href="ig/logo_WARA1.JPG" sizes="16x16" type="image/png">
     <link rel="apple-touch-icon" href="ig/imagendewara.jpg">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
@@ -294,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
