--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                     <p>WhatsApp</p>
                     <a href="https://wa.me/51941217300" target="_blank">
 
-                  <img class="footer-logo" src="ig/whatsapp-logo.webp"alt="WhatsApp" width="80" height="80">
+                  <img class="footer-logo" src="ig/whatsapp-logo.webp"alt="WhatsApp" width="80" height="80"></a>
                 </div>
             </div>
         </div>
@@ -294,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
