--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
         <nav class="footer-nav">
             <ul>
                 <li><a href="reclamos.html">Libro de reclamos</a></li>
-                <li><a href="#">Política de privacidad</a></li>
-                <li><a href="#">Términos y condiciones</a></li>
-                <li><a href="#">Política de Cookies</a></li>
+                <li><a href="politicapri.html">Política de privacidad</a></li>
+                <li><a href="terminosycondi.html">Términos y condiciones</a></li>
+                <li><a href="politicacookies.html">Política de Cookies</a></li>
             </ul>
         </nav>
     </div>
@@ -294,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
