--- a/index.html
+++ b/index.html
@@ -25,17 +25,18 @@
         <nav id="menu">
             <img src="ig/logo_WARA1.JPG" alt="Logo" height="140" width="180">
             <ul>
-                <li><a href="#index">Inicio</a></li>
-                <li><a href="#sobremi">Contacto</a></li>
-                <li><a href="#contacto">Proyectos</a></li>
-                <li><a href="#cartass">Sobre Nosotros</a></li>
-                <li><a href="#contacto">Servicios</a></li>
+                <li><a href="#inicial">Inicio</a></li>
+                <li><a href="#proyec">Proyectos</a></li>
+                <li><a href="#sobres">Sobre Nosotros</a></li>
+                <li><a href="#contact">Contacto</a></li>
+                <li><a href="#cartass">Servicios</a></li>
+
             </ul>
         </nav>
     </header>
 
     <section>
-        <div class="panel">
+        <div id="inicial"     class="panel">
             <img src="ig/BANNERWARA.jpg" alt="Imagen de fondo">
             <div class="texto">Compra tu lote en Huaral</div>
         </div>
@@ -120,7 +121,7 @@
             </div>
         </div>
 
-        <div class="proyecto">
+        <div  id="proyec"     class="proyecto">
             <div class="subrayado">
                 <h2>UNETE A MAS FAMILIAS QUE CUMPLIERON SU SUEÑOS </h2>
             </div>
@@ -194,7 +195,7 @@
         </section>
 
 
-        <div class="centrado">
+        <div   id="sobres"    class="centrado">
             <div class="subrayado">
                 <h2>SOBRE NOSOTROS</h2>
             </div>
@@ -239,7 +240,7 @@
             <p>&copy; 2024 Grupo Inmobiliario Wara. Todos los derechos reservados.</p>
         </div>
         <hr class="footer-line-vertical">
-        <div class="footer-info">
+        <div  id="contact"      class="footer-info">
             <div class="footer-contact">
                 <p class="footer-data">Teléfono: +51 934766169</p><br>
                 <p class="footer-data">Correo: waragrupoinmobiliario@gmail.com</p><br>
@@ -294,6 +295,7 @@
 
 </body>
 </html>
+
 
 
 
