--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
 <div id="navidad-overlay">
   <div id="navidad-popup">
-    <img src="ig/FLOTANTE_WARA.jpg" alt="Feliz Navidad" id="navidad-img">
+    <img src="ig/comunicado.png"  alt="Feliz Navidad" id="navidad-img">
 
     <button id="cerrar-navidad">Cerrar</button>
   </div>
@@ -295,6 +295,7 @@
 
 </body>
 </html>
+
 
 
 
